k8s-deploy/demo/depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:	#元数据
  annotations: #注释信息
    deployment.kubernetes.io/revision: '1'
    k8s.kuboard.cn/ingress: 'false'
    k8s.kuboard.cn/service: NodePort
    k8s.kuboard.cn/workload: testmydocker
  labels: #标签信息
    appname: testmydocker
  name: testmydocker #名称
  namespace: testmydocker
spec: 
  replicas: 1 #副本数量
  selector: #标签选择器
    matchLabels:
      appname: testmydocker
      version: v1.0.0
  strategy: #滚动升级策略
    type: RollingUpdate #类型
    rollingUpdate: 
      maxSurge: 25%
      maxUnavailable: 25% #滚动升级时允许的最大Unavailable的pod个数
  template:	
    metadata:	#元数据
      labels: #标签
        appname: testmydocker
        version: v1.0.0
    spec: #定义容器模板，该模板可以包含多个容器
      containers:
      - name: testmydocker
        image: docker.io/caijinhao/testdocker
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
      restartPolicy: Always	#Pod的重启策略
