k8s-deploy/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myappingress
  labels:
    appname: menutest
  namespace: testmydocker
spec:
  rules:
  - host: tt.6mv6.com #-------------------ngingx的servicename配置，需要在访问的主机执行nginx的主机的地址
    http:
      paths:
      - pathType: Prefix    #-------------路径匹配类型
        path: /menutest #-------------路径地址
        backend:
          serviceName: menutestservice #--------服务的名称
          servicePort: 80        #--------集群内暴露的端口
